fixed tooltip and logo spacing

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -40,10 +40,6 @@
 	text-align: center;
 }
 
-form .form-row {
-	border-bottom: 1px solid $light-grey;
-}
-
 #facebook {
 	background: #3b5998;
 	width: 100%;
