--- a/app/assets/stylesheets/screen_one.css.scss
+++ b/app/assets/stylesheets/screen_one.css.scss
@@ -61,7 +61,7 @@
 .profile-tooltip {
 	position: absolute;
 	bottom: -40px;
-	left: -50px;
+	left: -40px;
 	background: $turq;
 	height: 40px;
 	width: 120px;
@@ -78,7 +78,7 @@
 	border: 10px solid;
 	border-color: transparent transparent $turq transparent;
 	position: absolute;
-	left: 10px;
+	left: 20px;
 	bottom: 0px;
 	display: none;
 }
